--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
 </head>
 <body>
   <h1>Yo!</h1>
+  <!-- <form class="" action="index.html" method="GET"> -->
+    <label for="postcode"></label>
+    <input type="text" name="postcode" placeholder="Please enter postcode">
+    <!-- <label for="submit"></label> -->
+    <input id="button" type="submit" name="submit" value="SUBMIT">
+  <!-- </form> -->
 </body>
 </html>
