--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
   <h1>Yo!</h1>
   <!-- <form class="" action="index.html" method="GET"> -->
     <label for="postcode"></label>
-    <input id="input" type="text" name="postcode" placeholder="Please enter postcode">
+    <input id="postcode" type="text" name="postcode" placeholder="Please enter postcode">
     <!-- <label for="submit"></label> -->
     <input id="button" type="submit" name="submit" value="SUBMIT">
+    <div id="deliveryOptions"></div>
+
   <!-- </form> -->
 </body>
 </html>
