fix id inconsistency

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <label for="postcode"></label>
     <input id="postcode" type="text" name="postcode" placeholder="Please enter postcode">
     <!-- <label for="submit"></label> -->
-    <input id="button" type="submit" name="submit" value="SUBMIT">
+    <input id="postcode_search" type="submit" name="submit" value="SUBMIT">
     <div id="deliveryOptions"></div>
 
   <!-- </form> -->
